# src/routes/city.route.ts
@@ -3,7 +3,6 @@ import { Router } from 'express';
 import {
   getCities,
   getCity,
-  getSubMunicipalities,
   getBarangays,
 } from '../controllers/city.controller';
 
@@ -11,7 +10,6 @@ const cityRouter = Router();
 
 cityRouter.get('/', getCities);
 cityRouter.get('/:cityCode', getCity);
-cityRouter.get('/:cityCode/sub-municipalities', getSubMunicipalities);
 cityRouter.get('/:cityCode/barangays', getBarangays);
 
 export default cityRouter;
