# src/routes/cityMunicipality.route.ts
@@ -2,7 +2,6 @@ import { Router } from 'express';
 import {
   getCityMunicipalities,
   getCityMunicipality,
-  getSubMunicipalities,
   getBarangays,
 } from '../controllers/cityMunicipality.controller';
 
@@ -11,7 +10,6 @@ const router = Router();
 // Define the GET endpoint for combined city and municipality data
 router.get('/', getCityMunicipalities);
 router.get('/:code', getCityMunicipality);
-router.get('/:code/submunicipalities', getSubMunicipalities);
 router.get('/:code/barangays', getBarangays);
 
 export { router as cityMunicipalityRoute };
