# src/routes/municipality.route.ts
@@ -3,7 +3,6 @@ import { Router } from 'express';
 import {
   getMunicipalities,
   getMunicipality,
-  getSubMunicipalities,
   getBarangays,
 } from '../controllers/municipality.controller';
 
@@ -11,10 +10,6 @@ const municipalityRouter = Router();
 
 municipalityRouter.get('/', getMunicipalities);
 municipalityRouter.get('/:municipalityCode', getMunicipality);
-municipalityRouter.get(
-  '/:municipalityCode/sub-municipalities',
-  getSubMunicipalities,
-);
 municipalityRouter.get('/:municipalityCode/barangays', getBarangays);
 
 export default municipalityRouter;
